# fido

./: CMakeLists.txt  LICENSE.txt  README.md  config.h.cmake
models/config/: CMakeLists.txt
models/config/fido_config_add_role/: CMakeLists.txt  main.c
models/config/fido_config_add_role_shadow_sink/: CMakeLists.txt  main.c
models/config/fido_config_add_variable_create_release/: CMakeLists.txt  main.c
models/config/fido_config_command_add_argument/: CMakeLists.txt  main.c
models/config/fido_config_command_add_argument_shadow_sink/: CMakeLists.txt  main.c
models/config/fido_config_command_argument_create_release/: CMakeLists.txt  main.c
models/config/fido_config_command_arguments_finalize/: CMakeLists.txt  main.c
models/config/fido_config_command_arguments_finalize_shadow/: CMakeLists.txt  main.c
models/config/fido_config_command_create_release/: CMakeLists.txt  main.c
models/config/fido_config_create_release/: CMakeLists.txt  main.c
models/config/fido_config_parse/: CMakeLists.txt  main.c
models/config/fido_config_parse_add_variable/: CMakeLists.txt  main.c
models/config/fido_config_parse_add_variable_shadow/: CMakeLists.txt  main.c
models/config/fido_config_parse_as/: CMakeLists.txt  main.c
models/config/fido_config_parse_as_shadow/: CMakeLists.txt  main.c
models/config/fido_config_parse_command/: CMakeLists.txt  main.c
models/config/fido_config_parse_command_arguments/: CMakeLists.txt  main.c
models/config/fido_config_parse_command_arguments_shadow/: CMakeLists.txt  main.c
models/config/fido_config_parse_command_shadow/: CMakeLists.txt  main.c
models/config/fido_config_parse_permission/: CMakeLists.txt  main.c
models/config/fido_config_parse_permission_shadow/: CMakeLists.txt  main.c
models/config/fido_config_parse_role/: CMakeLists.txt  main.c
models/config/fido_config_parse_role_as_clause/: CMakeLists.txt  main.c
models/config/fido_config_parse_role_as_clause_shadow_sink/: CMakeLists.txt  main.c
models/config/fido_config_parse_role_command/: CMakeLists.txt  main.c
models/config/fido_config_parse_role_command_shadow_sink/: CMakeLists.txt  main.c
models/config/fido_config_parse_role_permission/: CMakeLists.txt  main.c
models/config/fido_config_parse_role_permission_shadow_sink/: CMakeLists.txt  main.c
models/config/fido_config_parse_role_shadow_sink/: CMakeLists.txt  main.c
models/config/fido_config_parse_role_variable/: CMakeLists.txt  main.c
models/config/fido_config_parse_role_variable_shadow_sink/: CMakeLists.txt  main.c
models/config/fido_config_parse_shadow/: CMakeLists.txt  main.c
models/config/fido_config_permission_create_release/: CMakeLists.txt  main.c
models/config/fido_config_role_add_command/: CMakeLists.txt  main.c
models/config/fido_config_role_add_command_shadow_sink/: CMakeLists.txt  main.c
models/config/fido_config_role_add_permission/: CMakeLists.txt  main.c
models/config/fido_config_role_add_permission_shadow_sink/: CMakeLists.txt  main.c
models/config/fido_config_role_add_variable/: CMakeLists.txt  main.c
models/config/fido_config_role_add_variable_shadow_sink/: CMakeLists.txt  main.c
models/config/fido_config_role_as_group_set/: CMakeLists.txt  main.c
models/config/fido_config_role_as_user_set/: CMakeLists.txt  main.c
models/config/fido_config_role_create_empty_release/: CMakeLists.txt  main.c
models/config/fido_config_role_create_release/: CMakeLists.txt  main.c
models/config/fido_config_role_name_set/: CMakeLists.txt  main.c
models/config/fido_config_role_permissions_finalize/: CMakeLists.txt  main.c
models/config/fido_config_role_permissions_finalize_shadow/: CMakeLists.txt  main.c
models/config/fido_config_roles_finalize/: CMakeLists.txt  main.c
models/config/fido_config_roles_finalize_shadow/: CMakeLists.txt  main.c
models/config/fido_scanner_peek_token/: CMakeLists.txt  main.c
models/config/fido_scanner_peek_token_shadow/: CMakeLists.txt  main.c
models/config/fido_scanner_read_token/: CMakeLists.txt  main.c
models/config/fido_scanner_read_token_add_variable/: CMakeLists.txt  main.c
models/config/fido_scanner_read_token_add_variable_shadow/: CMakeLists.txt  main.c
models/config/fido_scanner_read_token_group/: CMakeLists.txt  main.c
models/config/fido_scanner_read_token_group_shadow/: CMakeLists.txt  main.c
models/config/fido_scanner_read_token_keyword_as/: CMakeLists.txt  main.c
models/config/fido_scanner_read_token_keyword_as_shadow/: CMakeLists.txt  main.c
models/config/fido_scanner_read_token_keyword_cmd/: CMakeLists.txt  main.c
models/config/fido_scanner_read_token_keyword_cmd_shadow/: CMakeLists.txt  main.c
models/config/fido_scanner_read_token_keyword_deny/: CMakeLists.txt  main.c
models/config/fido_scanner_read_token_keyword_deny_shadow/: CMakeLists.txt  main.c
models/config/fido_scanner_read_token_keyword_env/: CMakeLists.txt  main.c
models/config/fido_scanner_read_token_keyword_env_shadow/: CMakeLists.txt  main.c
models/config/fido_scanner_read_token_keyword_permit/: CMakeLists.txt  main.c
models/config/fido_scanner_read_token_keyword_permit_shadow/: CMakeLists.txt  main.c
models/config/fido_scanner_read_token_keyword_role/: CMakeLists.txt  main.c
models/config/fido_scanner_read_token_keyword_role_shadow/: CMakeLists.txt  main.c
models/config/fido_scanner_read_token_shadow/: CMakeLists.txt  main.c
models/config/fido_scanner_read_token_string/: CMakeLists.txt  main.c
models/config/fido_scanner_read_token_string_shadow/: CMakeLists.txt  main.c
models/config/fido_scanner_read_token_username/: CMakeLists.txt  main.c
models/config/fido_scanner_read_token_username_shadow/: CMakeLists.txt  main.c
models/config/fido_scanner_skip_whitespace/: CMakeLists.txt  main.c
models/config/fido_scanner_skip_whitespace_shadow/: CMakeLists.txt  main.c
models/config/scanner_create_release/: CMakeLists.txt  main.c
models/options/fido_options_parse/: CMakeLists.txt  main.c
models/options/fido_options_release/: CMakeLists.txt  main.c
models/policy/: CMakeLists.txt
models/policy/fido_policy_check/: CMakeLists.txt  (+1 more)
(+298 files in other folders)
