ADD_SUBDIRECTORY(scanner_create_release)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_as)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_cmd)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_env)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_role)
ADD_SUBDIRECTORY(fido_scanner_skip_whitespace)
