ADD_SUBDIRECTORY(scanner_create_release)
ADD_SUBDIRECTORY(fido_scanner_read_token_add_variable)
ADD_SUBDIRECTORY(fido_scanner_read_token_add_variable_shadow)
ADD_SUBDIRECTORY(fido_scanner_read_token_group)
ADD_SUBDIRECTORY(fido_scanner_read_token_group_shadow)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_as)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_as_shadow)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_cmd)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_cmd_shadow)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_deny)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_deny_shadow)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_env)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_env_shadow)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_permit)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_permit_shadow)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_role)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_role_shadow)
ADD_SUBDIRECTORY(fido_scanner_read_token_string)
ADD_SUBDIRECTORY(fido_scanner_read_token_string_shadow)
ADD_SUBDIRECTORY(fido_scanner_read_token_username)
ADD_SUBDIRECTORY(fido_scanner_read_token_username_shadow)
ADD_SUBDIRECTORY(fido_scanner_skip_whitespace)
