ADD_SUBDIRECTORY(scanner_create_release)
ADD_SUBDIRECTORY(fido_config_add_role)
ADD_SUBDIRECTORY(fido_config_add_role_shadow_sink)
ADD_SUBDIRECTORY(fido_config_add_variable_create_release)
ADD_SUBDIRECTORY(fido_config_command_add_argument)
ADD_SUBDIRECTORY(fido_config_command_add_argument_shadow_sink)
ADD_SUBDIRECTORY(fido_config_command_argument_create_release)
ADD_SUBDIRECTORY(fido_config_command_arguments_finalize)
ADD_SUBDIRECTORY(fido_config_command_arguments_finalize_shadow)
ADD_SUBDIRECTORY(fido_config_command_create_release)
ADD_SUBDIRECTORY(fido_config_create_release)
ADD_SUBDIRECTORY(fido_config_parse_add_variable)
ADD_SUBDIRECTORY(fido_config_parse_add_variable_shadow)
ADD_SUBDIRECTORY(fido_config_parse_as)
ADD_SUBDIRECTORY(fido_config_parse_as_shadow)
ADD_SUBDIRECTORY(fido_config_parse_command)
ADD_SUBDIRECTORY(fido_config_parse_command_arguments)
ADD_SUBDIRECTORY(fido_config_parse_command_arguments_shadow)
ADD_SUBDIRECTORY(fido_config_parse_command_shadow)
ADD_SUBDIRECTORY(fido_config_parse_permission)
ADD_SUBDIRECTORY(fido_config_parse_permission_shadow)
ADD_SUBDIRECTORY(fido_config_parse_role_as_clause)
ADD_SUBDIRECTORY(fido_config_parse_role_as_clause_shadow_sink)
ADD_SUBDIRECTORY(fido_config_parse_role_command)
ADD_SUBDIRECTORY(fido_config_permission_create_release)
ADD_SUBDIRECTORY(fido_config_role_add_command)
ADD_SUBDIRECTORY(fido_config_role_add_command_shadow_sink)
ADD_SUBDIRECTORY(fido_config_role_add_permission)
ADD_SUBDIRECTORY(fido_config_role_add_permission_shadow_sink)
ADD_SUBDIRECTORY(fido_config_role_add_variable)
ADD_SUBDIRECTORY(fido_config_role_add_variable_shadow_sink)
ADD_SUBDIRECTORY(fido_config_role_as_group_set)
ADD_SUBDIRECTORY(fido_config_role_as_user_set)
ADD_SUBDIRECTORY(fido_config_role_create_release)
ADD_SUBDIRECTORY(fido_config_role_create_empty_release)
ADD_SUBDIRECTORY(fido_config_role_name_set)
ADD_SUBDIRECTORY(fido_config_role_permissions_finalize)
ADD_SUBDIRECTORY(fido_config_role_permissions_finalize_shadow)
ADD_SUBDIRECTORY(fido_config_roles_finalize)
ADD_SUBDIRECTORY(fido_config_roles_finalize_shadow)
ADD_SUBDIRECTORY(fido_scanner_peek_token)
ADD_SUBDIRECTORY(fido_scanner_peek_token_shadow)
ADD_SUBDIRECTORY(fido_scanner_read_token)
ADD_SUBDIRECTORY(fido_scanner_read_token_shadow)
ADD_SUBDIRECTORY(fido_scanner_read_token_add_variable)
ADD_SUBDIRECTORY(fido_scanner_read_token_add_variable_shadow)
ADD_SUBDIRECTORY(fido_scanner_read_token_group)
ADD_SUBDIRECTORY(fido_scanner_read_token_group_shadow)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_as)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_as_shadow)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_cmd)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_cmd_shadow)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_deny)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_deny_shadow)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_env)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_env_shadow)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_permit)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_permit_shadow)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_role)
ADD_SUBDIRECTORY(fido_scanner_read_token_keyword_role_shadow)
ADD_SUBDIRECTORY(fido_scanner_read_token_string)
ADD_SUBDIRECTORY(fido_scanner_read_token_string_shadow)
ADD_SUBDIRECTORY(fido_scanner_read_token_username)
ADD_SUBDIRECTORY(fido_scanner_read_token_username_shadow)
ADD_SUBDIRECTORY(fido_scanner_skip_whitespace)
ADD_SUBDIRECTORY(fido_scanner_skip_whitespace_shadow)
