ADD_SUBDIRECTORY(fido_policy_check)
ADD_SUBDIRECTORY(fido_policy_check_shadow)
ADD_SUBDIRECTORY(fido_policy_command_argument_match)
ADD_SUBDIRECTORY(fido_policy_command_argument_match_shadow)
ADD_SUBDIRECTORY(fido_policy_command_match)
ADD_SUBDIRECTORY(fido_policy_command_match_shadow)
ADD_SUBDIRECTORY(fido_policy_permission_match)
ADD_SUBDIRECTORY(fido_policy_permission_match_shadow)
ADD_SUBDIRECTORY(fido_policy_role_match)
ADD_SUBDIRECTORY(fido_policy_role_match_shadow)
